safari whitespace problem fixed

--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,13 @@ body {
     align-items: center;
     justify-content: center;
     font-family: 'DOSVGA', monospace;
+    white-space: nowrap;
 }
 
 .centered-box {
     padding: 20px;
     background-color: black;
-    width: 256px;
+    width: 272px;
     border: 2px dashed white;
     text-align: left;
     display: grid;
